--- a/app/src/main/res/values/attr.xml
+++ b/app/src/main/res/values/attr.xml
@@ -7,5 +7,10 @@
         <attr name="colors2" format="color|reference" />
         <attr name="colors3" format="color|reference" />
         <attr name="colors4" format="color|reference" />
+        <attr name="modeAnimation" format="enum">
+            <enum name="one" value="1"/>
+            <enum name="two" value="2"/>
+            <enum name="three" value="3"/>
+        </attr>
     </declare-styleable>
 </resources>
